[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[replace]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     "<crate>:<version>" = { path = "/path/to/local/checkout" }

"rust-webvr:0.4.0" = { path = '/home/mortimer/Projects/rust-webvr' }
#"https://github.com/servo/webrender#0.39.0" = { path = '/home/mortimer/Projects/c003d55/webrender' }
#"https://github.com/servo/webrender#webrender_traits:0.39.0" = { path = '/home/mortimer/Projects/c003d55/webrender_traits' }