[package]
name = "vr"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "vr"
path = "lib.rs"

[dependencies]
webvr = {path = "C:\\Users\\mortimer\\Projects\\rust-webvr", features = ["serde-serialization"] }
util = {path = "../util"}
ipc-channel = "0.5"
serde = "0.8"
serde_derive = "0.8"


