[package]
name = "vr"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "vr"
path = "lib.rs"

[dependencies]
ipc-channel = "0.5"
msg = {path = "../msg"}
util = {path = "../util"}
script_traits = {path = "../script_traits"}
vr_traits = {path = "../vr_traits" }


